scrollbar fixes

--- a/assets/scss/partials/_list-styles.scss
+++ b/assets/scss/partials/_list-styles.scss
@@ -10,15 +10,21 @@ nav {
     text-align: right;
 }
 
-// .nav-wrapper {
-//     overflow-y: scroll;
-// }
+.nav-wrapper {
+    position:relative;
+}
 //Main Navigation
 nav.site-navigation {
     z-index: 99;
     margin-top: 3.5em;
     flex-grow: 1;
+    overflow-x:hidden;
     overflow-y: scroll;
+    position:absolute;
+    left:0;
+    &::-webkit-scrollbar {
+        display:none;
+    }
     ul {
         list-style: none;
         margin-left: .2em;
