--- a/assets/scss/partials/_site-header.scss
+++ b/assets/scss/partials/_site-header.scss
@@ -78,15 +78,3 @@ a.section-title {
     }
 }
 
-.copyright {
-    width: 90%;
-    margin-right:auto;
-    margin-left:auto;
-    display:block;
-    font-size: .6em;
-    text-align: center;
-    position: relative;
-    margin-top:1em;
-    margin-bottom:1em;
-    font-family:$site-header-font-family;
-}
